--- a/app/src/main/res/layout/mainactivity2.xml
+++ b/app/src/main/res/layout/mainactivity2.xml
@@ -8,12 +8,14 @@
     <androidx.cardview.widget.CardView
 
         android:id="@+id/imageView2"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="4dp"
-        android:elevation="20dp"
-        app:cardCornerRadius="40dp"
+        android:layout_marginStart="10dp"
+        android:elevation="10dp"
+        app:cardCornerRadius="80dp"
+        app:cardElevation="5dp"
+        app:cardMaxElevation="12dp"
         app:layout_constraintBottom_toTopOf="@+id/searchView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -29,7 +31,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/textView8"
             app:layout_constraintVertical_bias="0.511"
+
             tools:srcCompat="@tools:sample/avatars" />
+
     </androidx.cardview.widget.CardView>
 
     <SearchView
@@ -91,25 +95,32 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:text="TextView"
+        android:fontFamily="@font/almendra_bold"
+        android:text="Hiren"
+
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/textView8"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
-    <GridView
-        android:layout_width="414dp"
-        android:layout_height="159dp"
-        android:layout_marginTop="32dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/grid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:numColumns="2"
+        android:verticalSpacing="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView29" />
+
 
     <TextView
         android:id="@+id/textView29"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
         android:text="Select Category"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/_dynamic"
