--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/abhaya_libre_semibold</item>
         <item>@font/aclonica</item>
+        <item>@font/akaya_telivigala</item>
         <item>@font/almendra_bold</item>
     </array>
 </resources>
