--- a/app/src/main/res/layout/activity_customer_dashboard.xml
+++ b/app/src/main/res/layout/activity_customer_dashboard.xml
@@ -9,124 +9,130 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.example.wholesalewale.CustomerDashboard">
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card"
-        android:layout_width="303dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="34dp"
-        android:layout_marginEnd="34dp"
-        android:layout_marginBottom="56dp"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="10dp"
-        app:cardMaxElevation="12dp"
-        app:cardPreventCornerOverlap="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" >
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card"
+            android:layout_width="303dp"
+            android:layout_height="61dp"
+            android:layout_marginStart="34dp"
+            android:layout_marginEnd="34dp"
+            android:layout_marginBottom="30dp"
+            android:background="#9951B7E4"
+            app:cardBackgroundColor="#4167A5"
+            app:cardCornerRadius="20dp"
+            app:cardElevation="10dp"
+            app:cardMaxElevation="12dp"
+            app:cardPreventCornerOverlap="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-            <ImageButton
-                android:id="@+id/orderList"
-                android:layout_width="60dp"
-                android:layout_height="30dp"
-                android:backgroundTint="#FFFFFF"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/liked"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.129"
-                app:srcCompat="@drawable/baseline_list_24" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#0051B7E4">
 
-            <TextView
-                android:id="@+id/textView30"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cart"
-                android:textColor="#0C0C0C"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/cart"
-                app:layout_constraintStart_toStartOf="@+id/cart"
-                app:layout_constraintTop_toBottomOf="@+id/cart" />
+                <ImageButton
+                    android:id="@+id/orderList"
+                    android:layout_width="60dp"
+                    android:layout_height="30dp"
+                    android:backgroundTint="#0051B7E4"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/liked"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.129"
+                    app:srcCompat="@drawable/baseline_list_24" />
 
-            <ImageButton
-                android:id="@+id/homego"
-                android:layout_width="60dp"
-                android:layout_height="30dp"
-                android:backgroundTint="#FFFFFF"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/cart"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.161"
-                app:srcCompat="@drawable/baseline_home_24" />
+                <TextView
+                    android:id="@+id/textView30"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="#0051B7E4"
+                    android:text="Cart"
+                    android:textColor="#0C0C0C"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/cart"
+                    app:layout_constraintStart_toStartOf="@+id/cart"
+                    app:layout_constraintTop_toBottomOf="@+id/cart" />
 
-            <TextView
-                android:id="@+id/textView27"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Home"
-                android:textColor="#191818"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/homego"
-                app:layout_constraintStart_toStartOf="@+id/homego"
-                app:layout_constraintTop_toBottomOf="@+id/homego" />
+                <ImageButton
+                    android:id="@+id/homego"
+                    android:layout_width="60dp"
+                    android:layout_height="30dp"
+                    android:backgroundTint="#0051B7E4"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/cart"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.161"
+                    app:srcCompat="@drawable/baseline_home_24" />
 
-            <ImageButton
-                android:id="@+id/cart"
-                android:layout_width="60dp"
-                android:layout_height="30dp"
-                android:layout_marginStart="60dp"
-                android:backgroundTint="#FFFFFF"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/liked"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/homego"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.161"
-                app:srcCompat="@drawable/baseline_shopping_cart_24" />
+                <TextView
+                    android:id="@+id/textView27"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Home"
+                    android:textColor="#191818"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/homego"
+                    app:layout_constraintStart_toStartOf="@+id/homego"
+                    app:layout_constraintTop_toBottomOf="@+id/homego" />
 
-            <ImageButton
-                android:id="@+id/liked"
-                android:layout_width="60dp"
-                android:layout_height="30dp"
-                android:backgroundTint="#FFFFFF"
-                android:contentDescription="Liked"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/orderList"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/cart"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.129"
-                app:srcCompat="@drawable/heart" />
+                <ImageButton
+                    android:id="@+id/cart"
+                    android:layout_width="60dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="60dp"
+                    android:backgroundTint="#0051B7E4"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/liked"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/homego"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.161"
+                    app:srcCompat="@drawable/baseline_shopping_cart_24" />
 
-            <TextView
-                android:id="@+id/textView33"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Liked"
-                android:textColor="#100F0F"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/liked"
-                app:layout_constraintStart_toStartOf="@+id/liked"
-                app:layout_constraintTop_toBottomOf="@+id/liked" />
+                <ImageButton
+                    android:id="@+id/liked"
+                    android:layout_width="60dp"
+                    android:layout_height="30dp"
+                    android:backgroundTint="#0051B7E4"
+                    android:contentDescription="Liked"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/orderList"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toEndOf="@+id/cart"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.129"
+                    app:srcCompat="@drawable/heart" />
 
-            <TextView
-                android:id="@+id/textView34"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" orders"
-                android:textColor="#151515"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/orderList"
-                app:layout_constraintStart_toStartOf="@+id/orderList"
-                app:layout_constraintTop_toBottomOf="@+id/orderList" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/textView33"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="#0051B7E4"
+                    android:text="Liked"
+                    android:textColor="#100F0F"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/liked"
+                    app:layout_constraintStart_toStartOf="@+id/liked"
+                    app:layout_constraintTop_toBottomOf="@+id/liked" />
+
+                <TextView
+                    android:id="@+id/textView34"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text=" orders"
+                    android:textColor="#151515"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/orderList"
+                    app:layout_constraintStart_toStartOf="@+id/orderList"
+                    app:layout_constraintTop_toBottomOf="@+id/orderList" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:id="@+id/home"
