--- a/app/src/main/res/layout/mainactivity2.xml
+++ b/app/src/main/res/layout/mainactivity2.xml
@@ -164,7 +164,7 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/shopsList"
-                android:layout_width="409dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="1dp"
                 android:layout_marginTop="1dp"
