--- a/app/src/main/res/layout/ordersitemlist.xml
+++ b/app/src/main/res/layout/ordersitemlist.xml
@@ -7,17 +7,18 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/CD"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
 
+        android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
         app:cardBackgroundColor="@color/white"
+
+
         app:cardCornerRadius="20dp"
-
-
         app:cardElevation="10dp"
         app:cardMaxElevation="12dp"
         app:cardPreventCornerOverlap="true"
