--- a/app/src/main/res/layout/shopforbuyer.xml
+++ b/app/src/main/res/layout/shopforbuyer.xml
@@ -8,8 +8,11 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/ca"
         android:layout_width="177dp"
-        android:layout_height="252dp"
-        android:layout_marginTop="2dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
         app:cardCornerRadius="13dp"
         app:cardElevation="5dp"
         app:cardMaxElevation="12dp"
